@@ -1,3 +1,8 @@
+2005-11-28  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* Mono.Posix_test.dll.sources: Move StdlibTest into the Mono.Unix.Native 
+	  directory.
+
 2005-11-01  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* Mono.Posix.dll.sources: Add new files: Mono.Unix/FileHandleOperations.cs,
